Fix the issue that headers misaligned with columns in wide table.

--- a/src/table-fixed-header.styl
+++ b/src/table-fixed-header.styl
@@ -22,11 +22,6 @@
                 th {
                     border-top: 0;
                     border-bottom: 0;
-
-                    &.th-scroll-bar {
-                        border-left: 0;
-                        padding: 0;
-                    }
                 }
             }
         }
